# fastack-cache

./: README.md  pyproject.toml
examples/aioredis/: Pipfile  docker-compose.yml
examples/aioredis/app/controllers/goodreads/: __init__.py
examples/aioredis/app/settings/: local.py  production.py
examples/redis/: Pipfile
examples/redis/app/controllers/: __init__.py
examples/redis/app/controllers/goodreads/: __init__.py  api.py
examples/redis/app/settings/: local.py  production.py
fastack_cache/: decorators.py  globals.py  helpers.py
fastack_cache/backends/: aioredis.py  redis.py
