[tool.poetry]
name = "fastack-cache"
version = "0.1.0"
description = "WIP"
authors = ["aprilahijriyan <37798612+aprilahijriyan@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastack = {extras = ["redis"], version = "^2.0.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
